Added pictures and done with navigation panel

--- a/DairyFarmTask/DairyFarmTask.csproj
+++ b/DairyFarmTask/DairyFarmTask.csproj
@@ -115,5 +115,26 @@
   <ItemGroup>
     <None Include="Resources\icons8-cow-breed-16.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8-milk-carton-50.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8-heart-with-dog-paw-50.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8-cow-udder-96.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8-discount-50.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8-total-sales-64.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8-dashboard-layout-48.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8-cow-breed-64.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
