--- a/DairyFarmTask/DairyFarmTask.csproj
+++ b/DairyFarmTask/DairyFarmTask.csproj
@@ -88,6 +88,9 @@
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Milk Production.resx">
+      <DependentUpon>Milk Production.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Splash.resx">
       <DependentUpon>Splash.cs</DependentUpon>
     </EmbeddedResource>
