--- a/DairyFarmTask/DairyFarmTask.csproj
+++ b/DairyFarmTask/DairyFarmTask.csproj
@@ -81,6 +81,12 @@
     <Compile Include="Milk Production.Designer.cs">
       <DependentUpon>Milk Production.cs</DependentUpon>
     </Compile>
+    <Compile Include="MilkSales.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MilkSales.Designer.cs">
+      <DependentUpon>MilkSales.cs</DependentUpon>
+    </Compile>
     <Compile Include="Splash.cs">
       <SubType>Form</SubType>
     </Compile>
