edited the form

--- a/DairyFarmTask/DairyFarmTask.csproj
+++ b/DairyFarmTask/DairyFarmTask.csproj
@@ -107,6 +107,9 @@
     <EmbeddedResource Include="Milk Production.resx">
       <DependentUpon>Milk Production.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="MilkSales.resx">
+      <DependentUpon>MilkSales.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Splash.resx">
       <DependentUpon>Splash.cs</DependentUpon>
     </EmbeddedResource>
