--- a/DairyFarmTask/DairyFarmTask.csproj
+++ b/DairyFarmTask/DairyFarmTask.csproj
@@ -56,6 +56,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Breedimh.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Breedimh.Designer.cs">
+      <DependentUpon>Breedimh.cs</DependentUpon>
+    </Compile>
     <Compile Include="Cows.cs">
       <SubType>Form</SubType>
     </Compile>
