--- a/DairyFarmTask/DairyFarmTask.csproj
+++ b/DairyFarmTask/DairyFarmTask.csproj
@@ -56,11 +56,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Breedimh.cs">
+    <Compile Include="Breeding.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Breedimh.Designer.cs">
-      <DependentUpon>Breedimh.cs</DependentUpon>
+    <Compile Include="Breeding.Designer.cs">
+      <DependentUpon>Breeding.cs</DependentUpon>
     </Compile>
     <Compile Include="Cows.cs">
       <SubType>Form</SubType>
